# zero-project-management_analysis

./: .gitignore  README.md  pyproject.toml
auths/: managers.py  models.py  serializers.py  urls.py  views.py
auths/migrations/: 0001_initial.py
config/: settings.py  urls.py
